========================

General notes for this release
------------------------------

This is a feature release which increases functionality, stability and fine-tunes
existing functionality in a number of areas. The major changes are: 

1. more database commands to display and list entries in the DB
2. improvements in geolocation lookup to handle failed API calls and Google rate limit
3. context sensitive command completion in command shell 
4. a number of new configuration options (in *g7config.conf*)

    - Specification of a Google API key which is used in the geolocation lookups.
      This allows the specification of a commercial key to increase the allowed
      number of calls (and rate/s) to Google location APIs.

      *More information about Google API key is available in the manual
      (see Appendix A.2 in the manual)*

    - A new setting (or actually settings) in the configuration file makes it
      possible to include two static mini-maps in the notification mails on event
      notifications for those event that carry a location. This is a small
      customizable static Google map centered around the current location of
      the tracker at two zoom levels (overview and detailed). The exact zoom-levels
      used are customizable

    - A new setting to customize mail subject prefix

    - A new setting to choose to use a shorter form of device ID in subject header
5. new server commands
    - **.date ** Prints current date and time on server
    - **.cachestat**  Prints statistics on the Geolcation caches
    - **.address** Prints the street address for the last received location
    - **db head** Print the *n* latest received location updates
    - **db tail** Print the *n* first received locations
    - **db sort** Controls the sorting order for the *db head* and *db tail*
       commands DB
    - **.table** Toggles the printing of pretty-printed tables


-----
**NOTE:** Since the configuration file has been updated it is recommended to